force-app/main/default/objects/Course_Plan_Unit__c/Course_Plan_Unit__c.object-meta.xml
<CustomObject>
    <label>Course Plan Unit</label>
    <nameField>
        <label>Course Plan Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Plan Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>