force-app/main/default/objects/Course_Plan_Unit__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Course Plan Units</relationshipLabel>
    <relationshipName>Course_Plan_Units</relationshipName>
    <type>Lookup</type>
</CustomField>