force-app/main/default/objects/Course_Plan_Unit__c/fields/Old_unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_unit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old unit ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>