force-app/main/default/objects/Course_Plan_Unit__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Sections</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Course Plan Units (Section)</relationshipLabel>
    <relationshipName>Course_Plan_Units1</relationshipName>
    <type>Lookup</type>
</CustomField>