force-app/main/default/objects/Course_Plan_Unit__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Semester</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Course Plan Units</relationshipLabel>
    <relationshipName>Course_Plan_Units</relationshipName>
    <type>Lookup</type>
</CustomField>