force-app/main/default/objects/Course_Plan_Unit__c/fields/Semester_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Semester_Unit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Semester Unit ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>