force-app/main/default/objects/Course_Plan_Unit__c/validationRules/Lock_the_Course_Plan_Unit_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_the_Course_Plan_Unit_1</fullName>
    <active>true</active>
    <errorConditionFormula>Course_Offering__r.Course_Plan_Locked__c</errorConditionFormula>
    <errorMessage>Record has been locked (  Usually the record should get locked before one week of the semester start date)</errorMessage>
</ValidationRule>